Updated to JSK 17, updated dependencies, and let's say added better null-safety.